--- a/css/typographic-styles.css
+++ b/css/typographic-styles.css
@@ -7,6 +7,14 @@
 html {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   color: #666;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  -moz-box-sizing: inherit;
+       box-sizing: inherit;
 }
 p {
   font-weight: 400;
@@ -20,6 +28,10 @@ a {
 a:hover {
   border-color: #666;
   color: #000;
+}
+code {
+  font-size: 0.9em;
+  font-family: Menlo, Consolas, Monaco, "Lucida Console", monospace;
 }
 h1,
 h2,
@@ -61,7 +73,6 @@ h6 {
   margin: 0.5em 0;
 }
 .wrapper {
-  width: 100%;
   margin: 3em 5%;
 }
 @media screen and (max-width: 600px) {
