--- a/stylus/typographic-styles.styl
+++ b/stylus/typographic-styles.styl
@@ -10,6 +10,10 @@
 html 
 	font-family "Helvetica Neue", Arial, Helvetica, sans-serif;
 	color #666
+	box-sizing border-box
+
+*, *:before, *:after
+	box-sizing inherit
 
 p 
 	font-weight 400
@@ -22,6 +26,10 @@ a
 	&:hover 
 		border-color #666
 		color #000
+
+code
+	font-size .9em
+	font-family Menlo, Consolas, Monaco, "Lucida Console", monospace
 
 // headings
 
@@ -57,7 +65,6 @@ h6
 // wrapper 
 
 .wrapper
-	width 100%
 	margin 3em 5%
 	@media screen and (max-width: 600px)
 		margin 0
