--- a/stylus/typographic-styles.styl
+++ b/stylus/typographic-styles.styl
@@ -18,6 +18,12 @@ html
 p 
 	font-weight 400
 	font-size 1em
+	
+p, ol, ul
+	line-height 1.75em
+
+ol
+	list-style decimal-leading-zero
 
 a
 	color #333
