--- a/libs/typographic-styles/css/typographic-styles.css
+++ b/libs/typographic-styles/css/typographic-styles.css
@@ -18,6 +18,14 @@ p {
   font-weight: 400;
   font-size: 1em;
 }
+p,
+ol,
+ul {
+  line-height: 1.75em;
+}
+ol {
+  list-style: decimal-leading-zero;
+}
 a {
   color: #333;
   text-decoration: none;
