--- a/css/typographic-styles.css
+++ b/css/typographic-styles.css
@@ -1,13 +1,14 @@
 /*
-
-	Typographic Styles
-	@owebboy
-	
-*/
+ * Typographic Styles
+ * @owebboy
+ */
 html {
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   color: #666;
   box-sizing: border-box;
+  font-kerning: normal;
+  margin: 0;
+  padding: 0;
 }
 *,
 *:before,
@@ -29,7 +30,7 @@ ol {
 a {
   color: #333;
   text-decoration: none;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid #c6cbcc;
 }
 a:hover {
   border-color: #666;
@@ -38,6 +39,10 @@ a:hover {
 code {
   font-size: 0.9em;
   font-family: Menlo, Consolas, Monaco, "Lucida Console", monospace;
+}
+hr {
+  border: 0;
+  border-bottom: 1px solid #c6cbcc;
 }
 h1,
 h2,
@@ -49,7 +54,6 @@ h6 {
   font-weight: 700;
 }
 .title {
-  text-transform: uppercase;
   margin: 0;
   font-weight: 900;
   font-size: 2em;
@@ -85,4 +89,70 @@ h6 {
   .wrapper {
     margin: 0;
   }
+}
+.marsala {
+  color: #955251;
+}
+.bg-marsala {
+  background: #955251;
+}
+.scuba-blue {
+  color: #00b2ca;
+}
+.bg-scuba-blue {
+  background: #00b2ca;
+}
+.classic-blue {
+  color: #1d4e89;
+}
+.bg-classic-blue {
+  background: #1d4e89;
+}
+.tangerine {
+  color: #f79256;
+}
+.bg-tangerine {
+  background: #f79256;
+}
+.lucite-green {
+  color: #7dcfb6;
+}
+.bg-lucite-green {
+  background: #7dcfb6;
+}
+.custard {
+  color: #ead98b;
+}
+.bg-custard {
+  background: #ead98b;
+}
+.steel {
+  color: #666;
+}
+.bg-steel {
+  background: #666;
+}
+.iron {
+  color: #c6cbcc;
+}
+.bg-iron {
+  background: #c6cbcc;
+}
+.oil {
+  color: #333;
+}
+.bg-oil {
+  background: #333;
+}
+.black {
+  color: #000;
+}
+.bg-black {
+  background: #000;
+}
+.white {
+  color: #fff;
+}
+.bg-white {
+  background: #fff;
 }
